# libpam-devid

./: Changelog  INSTALL  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  configure  configure.ac  pam_devid.conf.sample
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
devidd/: Makefile.am  Makefile.in  main.c  main.h
doc/: Doxyfile  Makefile.am  Makefile.in
pam/: Makefile.am  Makefile.in  config.h.in  mod_sample.c  mod_udev.c  pam_devid.c  pam_mod_api.h
src/: Makefile.am  Makefile.in  config.h.in  libpam_devid.c  pam_devid.c
test/: Makefile.am  Makefile.in  pam_utmp.c
