##
## Makefile.am for libpam-devid in /home/phil/Travail/Development/Pam/libpam-devid
##
## Made by Philippe THIERRY
## Login   <Philippe THIERRY@reseau-libre.net>
##
## Started on  mer. 20 juin 2012 15:30:10 CEST Philippe THIERRY
## Last update mer. 20 juin 2012 15:30:10 CEST Philippe THIERRY
##

SUBDIRS = src doc .

doc:
	$(MAKE) -C doc doc

.PHONY: doc

EXTRA_DIST = 

CLEANFILES = *~ .*.swp .*.swo output* *.gcov *.gprof

