##
## Makefile.am for libpam-devid in /home/phil/Travail/Development/Pam/libpam-devid/doc
##
## Made by Philippe THIERRY
## Login   <Philippe THIERRY@reseau-libre.net>
##
## Started on  jeu. 21 juin 2012 18:25:11 CEST Philippe THIERRY
## Last update jeu. 21 juin 2012 18:25:11 CEST Philippe THIERRY
##

SUBDIRS = .

DOXYGEN = doxygen

doc:
	$(DOXYGEN) $(srcdir)/Doxyfile

EXTRA_DIST = Doxyfile

CLEANFILES = *~ .*.swp .*.swo output* *.gcov *.gprof
